[gd_scene load_steps=5 format=2]

[ext_resource path="res://Presets/Transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/Multiplayer/ConnectingServer.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Robfont-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = SubResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Transition" parent="." instance=ExtResource( 1 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer"]
margin_left = 360.0
margin_top = 485.0
margin_right = 1560.0
margin_bottom = 595.0
rect_min_size = Vector2( 1200, 110 )
size_flags_vertical = 4
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Connecting to server..."
scroll_active = false

[node name="RetryTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="transition_out_done" from="Transition" to="." method="_on_Transition_transition_out_done"]
[connection signal="timeout" from="RetryTimer" to="." method="_on_RetryTimer_timeout"]
